--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
